@@ -11,6 +11,7 @@
 
  - Fix for bug 28886: Removed obsolete GMX crawler identifiers/specs from 'crawler.properties' file
  - Fix for bug 29509: Fixed typo in i18n string
+ - Fix for bug 29512: File folder publication offers latest version of a listed file
 
 * 2013-10-27 - thorben.betten@open-xchange.com
 
